updated load to use optional